--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "require": {
         "open-smf/connection-pool": "~1.0",
         "monolog/monolog": "^2.2",
-        "ext-rdkafka": "4.0.4-dev"
+        "ext-rdkafka": "5.0.0"
     }
 }
