--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,11 @@
         "open-smf/connection-pool": "~1.0",
         "monolog/monolog": "^2.2",
         "ext-rdkafka": "5.0.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Workers\\": "Workers/",
+            "Models\\": "Models/"
+        }
     }
 }
