- Session Reactor and Workers for Sync and Transform Process

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "open-smf/connection-pool": "~1.0",
         "monolog/monolog": "^2.2",
-        "ext-rdkafka": "5.0.0"
+        "ext-rdkafka": "5.0.0",
+        "ramsey/uuid": "^4.1"
     },
     "autoload": {
         "psr-4": {
