--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "ext-rdkafka": "5.0.0",
         "ramsey/uuid": "^4.1",
         "nesbot/carbon": "^2.45",
-        "guzzlehttp/guzzle": "^7.2"
+        "guzzlehttp/guzzle": "^7.2",
+        "predis/predis": "^1.1"
     },
     "autoload": {
         "psr-4": {
