--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "autoload": {
         "psr-4": {
             "Classes\\": "Classes/",
+            "Helper\\":"Helper/",
             "Workers\\": "Workers/",
             "Models\\": "Models/"
         }
